kubernetes/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: google-store-deployment
  labels:
    app: google-store
spec:
  replicas: 2
  selector:
    matchLabels:
      app: google-store
  template:
    metadata:
      labels:
        app: google-store
    spec:
      containers:
      - name: google-store
        image: <AWS_ACCOUNT_ID>.dkr.ecr.<REGION>.amazonaws.com/google-store:latest
        ports:
        - containerPort: 80
