kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
name: google-store-service
spec:
type: LoadBalancer
selector:
app: google-store
ports:
- port: 80
targetPort: 80
