kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: google-store-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: google-store.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: google-store-service
            port:
              number: 80
